# abi

./: .gitignore  ABI_ARCHITECTURE.md  ABI_EXPERIMENTS.md  ABI_REPRODUCE.md  ABI_START_HERE.md  CITATION.cff  CLAIMS.md  CONTRIBUTING.md  Dockerfile  EXPERIMENTS_INDEX.md  FAQ.md  FILE_MANIFEST.md  LICENSE  OPEN_SOURCE_README.md  PROOF.md  README.md  ROADMAP.md  RUN_NEW_EXPERIMENTS.md  SECURITY.md  SKEPTICS.md  calibration_scaling_law_b.py  calibration_scaling_law_b_results.json  cross_arch_enc_dec_nib.py  cross_arch_enc_dec_nib_results.json  cross_arch_t5_nib_v53.py  cross_arch_t5_nib_v53_results.json  cross_arch_t5_succession.py  cross_arch_t5_succession_results.json  cross_family_nib.py  cross_family_nib_results.json  cross_lineage_results.json  cross_lineage_transfer_test.py  cross_size_large_nib_v9.py  cross_size_large_nib_v9_results.json  cross_size_transfer_results.json  cross_size_transfer_test.py  exp_deepseek_1p3b_nib.py  exp_qwen_1p5b_nib.py  exp_qwen_7b_nib.py  multi_domain_atlas.py  (+11 more)
.github/: pull_request_template.md
abi/: __init__.py  evaluation.py  models.py  training.py
experiments/: abi_ablation_results.json  abi_ablation_test.py  abi_scaling_law.py  abi_scaling_results.json  analytical_calibration.py  analytical_calibration_results.json  calibration_budget_floor.py  calibration_budget_floor_results.json  generation_equivalence_results.json  generation_equivalence_test.py  knowledge_non_interference.py  knowledge_non_interference_results.json  method_robustness_results.json  method_robustness_sweep.py  nib_geometry_diagnostic.py  precision_parity.py  (+10 more)
(+8 files in other folders)
